# nanodet_deploy

./: README.md  requirements.txt
config/: temple.yml
config/legacy/: damper.yml  damper_05.yml
config/models/: nanodet-m-0.5x.yml  nanodet-m-1.0x.yml  nanodet-m-1.5x.yml  nanodet-plus-m-1.0x.yml  nanodet-plus-m-1.5x.yml
demo/: demo.py
demo_ncnn/: CMakeLists.txt  README.md  main.cpp  nanodet.cpp  nanodet.h
nanodet/model/head/: gfl_head.py  nanodet_plus_head.py
